Change from 93vw to 100% to remove overflow bug

--- a/app/static/src/scss/includes/_browse.scss
+++ b/app/static/src/scss/includes/_browse.scss
@@ -419,7 +419,7 @@
   }
 
   .search__container__content {
-    width: 93vw;
+    width: 100%;
     margin: -15px;
     padding: 15px;
     display: flex;
